--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/csergey8/webpack-build-template/issues"
   },
-  "homepage": "https://github.com/csergey8/webpack-build-template#readme"
+  "homepage": "https://github.com/csergey8/webpack-build-template#readme",
+  "devDependencies": {
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.11.1"
+  }
 }
