--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.9",
     "file-loader": "^1.1.6",
+    "html-webpack-plugin": "^2.30.1",
     "postcss-loader": "^2.0.10",
     "style-loader": "^0.20.1",
     "url-loader": "^0.6.2",
@@ -32,6 +34,7 @@
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2"
